--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "dyweb/ring",
+    "require": {
+        "php": ">=5.3.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
         "squizlabs/php_codesniffer": "~2.0"
