--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "dyweb/ring",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "league/flysystem":"~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
