--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
-        "squizlabs/php_codesniffer": "~2.0"
+        "squizlabs/php_codesniffer": "~2.0",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "license": "MIT",
     "autoload": {
