--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require-dev": {
         "phpunit/phpunit": "~4.4",
         "squizlabs/php_codesniffer": "~2.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "phpdocumentor/phpdocumentor": "2.*"
     },
     "license": "MIT",
     "autoload": {
